--- a/_posts/2018-07-29-paging.markdown
+++ b/_posts/2018-07-29-paging.markdown
@@ -69,7 +69,8 @@ linear 32 bit   ===>    physical 52 bit
 
 ### Linear translation with PAE paging
 
-CR3 -> PDPTE -> PDE -> PTE -> PT
+CR3 -> PDPTE -> PDE -> PTE -> PT (4KB pages)
+CR3 -> PDPTE -> PDE -> PT (2MB pages)
 
 PAE paging may map linear addresses to either **4KB** or to **2MB** pages.
 
@@ -86,10 +87,119 @@ The **PDE**'s physial address is specified with the below method: (commbination 
     - Bits 11:3  are bits 29:21 of the linear address
     - Bits 2:0   are 0.
 
- 
+Each PDE controls accessto a 2MB region of the linear address space.
+
+A PDE can map a 2MB page or 512  4KB pages which depends on the PS flag (bit 7) of the PDE.
+
+   - PS == 1 then PDE maps a 2MB page
+        **Final physical address** is computed: 
+            - Bits 51:21 from PDE
+            - Bits 20:0 from the original linear address
+   
+   - PS == 0 then a 4KB page table is located at the physical address specified by
+            bits 51:12 of the PDE. A page table has 512, 8 byte entries, **PTE**s
+    
+        A PTE is selected from this page table by the below method:
+            
+            - Bits 51:12 are from the PDE
+            - Bits 11:3 are bits 20:12 of the linear address
+            - Bits 2:0 are 0
+
+Every PTE maps a 4KB page (because PTE is identified by bits 31:12 of the linear address)
+
+        Final address at this point is calculated:
+            
+            - Bits 51:12 from the PTE
+            - Bits 11:0  from the original linear address
+
+If the P flag (bit 0) of the PDE or the PTE is 0 or if the PDE or PTE sets any reserved bit then the entry is 
+used neither to reference another paging structure entry nor map a page. A reference to such linear address would cause
+a page-fault exception.
+
+The following bits are reserved with PAE paging:
+
+    If the P flag (bit 0) of a PDE or a PTE is 1, bits 62:MAXPHYADDR are reserved.
+
+    If the P flag and the PS flag (bit 7) of a PDE are both 1, bits 20:13 are reserved.
+
+    If IA32_EFER.NXE = 0 and the P flag of a PDE or a PTE is 1, the XD flag (bit 63) is reserved.
+
+    If the PAT is not supported:
+        — If the P flag of a PTE is 1, bit 7 is reserved.
+        — If the P flag and the PS flag of a PDE are both 1, bit 12 is reserved.
+
+
+All the above information is taken from the Intel Software Developer's manual (chapter 4, Paging)
+
+
+## Implementation
+
+We can create a linux kernel module to walk the process's page table structures.
+
+include/linux/mm_types.h    --> for the mm_struct
+arch/x86/include/asm/pgtable_types.h  --> for the pgd_t
+arch/x86/include/asm/pgtable-3level_types --> pgdval_t
+
+You can access the current process:
+
+{% highlight c %}
+struct task_struct* proc = current;      // current is macro ; calls get_current()
+struct mm_struct*   mm   = proc->mm;     
+pgd_t*              pgd  = mm->pgd;      // should point to the table containing the 4 entries of pgd entries
+{% endhighlight %}
+
+{% highlight c %}
+typedef struct { pgdval_t pgd;  } pgd_t;
+typedef u64	pgdval_t;
+{% endhighlight %}
 
 
 
+    
+
+{% highlight c %}
+static u64 mmu_walk_pae(u32 vaddr)
+{
+    struct task_struct* proc = current;
+    struct mm_struct* mm = proc->mm;
+    pgd_t* pdpte_table = mm->pgd;
+    
+    // PDPTE selection
+    // virt addr bits 31:30 select the PDPTEi
+    u32 pdpte_index = (vaddr & 0xC0000000) >> 30;
+    u32 pdpte = *(u32*)(pdpte_table + pdpte_index*8);
+    // inspect the P flag (bit 0)
+    if(!(pdpte & 0x1)) {
+        printk("PDPTE%u not a mapping\n", pdpte_index);
+        return NULL;
+    }
+    u32* pde_addr = get_pde_addr(pdpte, vaddr);
+    u32  pde = *pde_addr;
+    if(!(pde & 0x1)) {
+        printk("PDE: %p contains: %x is not a mapping.\n", pde_addr, pde);
+    }
+    if(pde & 0x80) {
+        printk("PDE: %p contain : %x is mapping a 2MB page.\n", pde_addr, pde);
+        return (pde & 0x000fffffffe00000) | (vaddr & 0x001fffff);
+    }
+
+    u32 pte_table_addr = (pde & 0xfffff000) + 0xc0000000;
+    u32 pte_index = ((vaddr & 0x1ff000) >> 12);
+    u64* pte_addr = (u64*)(pte_table_addr + (pte_index * 8));
+    u64  pte = *pte_addr;
+    if(!(pte & 0x1)) {
+        printk("PTE not a mapping, PTE table start: %x, index: %x, pte_addr: %p, pte: %llx", 
+                                    pte_table_addr, pte_index, pte_addr, pte);
+        return NULL;
+    }
+
+    // final physical
+    return (pte & 0x000ffffffffff000) | (vaddr & 0xfff);
+
+}
+
+
+{% endhighlight %}
 
 
 
